--- a/created.html
+++ b/created.html
@@ -115,10 +115,38 @@
   <tr>
     <td>
       <table>
-        <tr><td class="label-view">Tier</td><td class="label-value">Unlimited</td></tr>
+        <tr><td class="label-view">Throttling Tier</td><td class="label-value">Unlimited</td></tr>
         <tr><td class="label-view">Visibility</td><td class="label-value">Public</td></tr>
         <tr><td class="label-view">Endpoint</td><td class="label-value">http://gateway/sample/1.0.0</td></tr>
         <tr><td class="label-view">Resources</td><td class="label-value"></td></tr>
+        <tr><td colspan="2">
+<table class="table">  
+<tr>  
+  <td class="info">GET</td>
+  <td> /* <td>
+  <td>Application & Application User</td>
+  <td>Unlimited</td>
+</tr>          
+<tr>
+  <td class="success">POST</td>
+  <td> /* <td>
+  <td>Application & Application User</td>
+  <td>Unlimited</td>
+</tr>  
+<tr>  
+  <td class="warning">PUT</td>
+  <td> /* <td>
+  <td>Application & Application User</td>
+  <td>Unlimited</td>
+</tr>  
+<tr>  
+  <td class="danger">DELETE</td>
+  <td> /* <td>
+  <td>Application & Application User</td>
+  <td>Unlimited</td>
+</tr>  
+</table>
+        </td><tr>
       </table>
     </td>
   </tr>
@@ -134,7 +162,7 @@
 </div>
     <footer class="footer">
       <div class="container-fluid">
-        <p class="text-muted">© Copyright 2011 – 2014 All Rights Reserved. </p>
+        <p class="text-muted copy">© Copyright 2011 – 2014 All Rights Reserved. </p>
       </div>
     </footer>
 
