--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="public/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="public/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="css/sticky-footer-navbar.css" rel="stylesheet">
@@ -120,36 +121,36 @@
       <td>SampleAPI</td>
       <td></td>
       <td></td>
-      <td></td>
-      <td><a class="">Publish</a></td>            
+      <td><i class="fa fa-circle" style="color:orange"></i> Created</strong></td>
+      <td><a class="btn btn-primary  btn-sm">Publish</a></td>            
     </tr>
     <tr>
-      <td>SampleAPI</td>
+      <td>Youtube</td>
       <td></td>
       <td></td>
-      <td></td>
-      <td><a class="">Publish</a></td>            
+      <td><i class="fa fa-circle" style="color:orange"></i> Created</strong></td>
+      <td><a class="btn btn-primary  btn-sm">Publish</a></td>            
     </tr>
     <tr>
-      <td>SampleAPI</td>
+      <td>PizzaShack</td>
       <td></td>
       <td></td>
-      <td></td>
-      <td><a class="">Publish</a></td>            
+      <td><i class="fa fa-circle" style="color:green"></i> Published</strong></td>
+      <td><a class="btn btn-warning  btn-sm">Unpublish</a></td>            
     </tr>
                 <tr>
-      <td>SampleAPI</td>
+      <td>Forum</td>
       <td></td>
       <td></td>
-      <td></td>
-      <td><a class="">Publish</a></td>            
+      <td><i class="fa fa-circle" style="color:green"></i> Published</strong></td>
+      <td><a class="btn btn-warning  btn-sm">Unpublish</a></td>            
     </tr>
     <tr>
-      <td>SampleAPI</td>
+      <td>APIManager</td>
       <td></td>
       <td></td>
-      <td></td>
-      <td><a class="">Publish</a></td>            
+      <td><i class="fa fa-circle" style="color:green"></i> Published</strong></td>
+      <td><a class="btn btn-warning  btn-sm">Unpublish</a></td>            
     </tr>    
   </tbody>
 </table>
@@ -168,7 +169,7 @@
 </div>
     <footer class="footer">
       <div class="container-fluid">
-        <p class="text-muted">© Copyright 2011 – 2014 All Rights Reserved. </p>
+        <p class="text-muted copy">© Copyright 2011 – 2014 All Rights Reserved. </p>
       </div>
     </footer>
 
