--- a/new.html
+++ b/new.html
@@ -134,17 +134,17 @@
     </div>
   </div>
 </div>
-
 <!-- Multiple Radios (inline) -->
 <div class="form-group">
-  <label class="control-label" for="radios">Implementation Method</label>
+  <hr />  
+  <h4>Implementation Method</h4>
   <div class=""> 
     <label class="radio-inline" for="radios-0">
       <input name="radios" id="radios-0" value="Endpoint" checked="checked" type="radio">
       Endpoint
     </label> 
     <label class="radio-inline" for="radios-1">
-      <input name="radios" id="radios-1" value="Import Swagger" type="radio">
+      <input name="radios" id="radios-1" value="ImportSwagger" type="radio">
       Import Swagger
     </label> 
     <label class="radio-inline" for="radios-2">
@@ -155,9 +155,27 @@
 </div>
 
 <!-- Text input-->
-<div class="form-group">
+<div class="form-group impl_method" id="Endpoint">
   <label class="control-label" for="endpoint">Endpoint</label>
-  <input id="endpoint" name="endpoint" placeholder="URL of the endpoint." class="form-control input-md max_width" required="" type="text">
+  <div class="input-group max_width">
+    <input id="endpoint" name="endpoint" placeholder="URL of the endpoint." class="form-control input-md" type="text">
+    <span class="input-group-btn">
+        <button class="btn btn-default" type="button" data-toggle="modal" data-target="#myModal">Test</button>
+    </span>
+  </div>  
+</div>
+
+<div class="form-group impl_method" style="display:none" id="ImportSwagger">
+  <label for="exampleInputFile">Upload Swagger File</label>
+  <input type="file" id="exampleInputFile">
+  <p class="help-block">Supports Swagger 2</p>
+  <label class="control-label" for="endpoint">Or Provide Swagger URL</label>
+  <div class="input-group max_width">
+    <input id="endpoint" name="endpoint" placeholder="Ex: http://petstore.swagger.io/v2/swagger.json" class="form-control input-md" type="text">
+    <span class="input-group-btn">
+        <button class="btn btn-default" type="button" data-toggle="modal" data-target="#myModal">Test</button>
+    </span>
+  </div>      
 </div>
 
 <!-- Button -->
@@ -181,10 +199,46 @@
 </div>
     <footer class="footer">
       <div class="container-fluid">
-        <p class="text-muted">© Copyright 2011 – 2014 All Rights Reserved. </p>
+        <p class="text-muted copy">© Copyright 2011 – 2014 All Rights Reserved. </p>
       </div>
     </footer>
 
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Test Endpoint</h4>
+      </div>
+      <div class="modal-body">
+        <h5>Endpoint URL :</h5>
+        <div class="well">http://sample.com/api</div>                  
+        <h5>HTTP Headers</h5>
+<pre class="well">Accept-Ranges bytes
+Connection  Keep-Alive
+Content-Encoding  gzip
+Content-Length  2408
+Content-Type  application/json
+Date  Tue, 03 Mar 2015 09:01:51 GMT
+Last-Modified Tue, 03 Mar 2015 09:01:48 GMT
+Server  Apache/2.4.7 (Ubuntu)
+</pre>
+        <h5>Responce</h5>     
+<pre class="well">{
+  "error": 404,
+  "message": "Resource Not Found"
+}
+</pre>                   
+      </div>
+      <div class="modal-footer">        
+        <button type="button" class="btn btn-default" >Try Again</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Ok</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
@@ -203,6 +257,13 @@
         e.preventDefault();
         $("#wrapper").toggleClass("toggled");
     });
+
+    $('input[name=radios]').change(function () {
+      $(".impl_method").hide();
+      $("#"+$(this).val()).show();
+    });
+
+    $("radios-0").attr('checked', 'checked');
     </script>    
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
