--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
       <th>API</th>
       <th>Activity</th>
       <th>Usage</th>  
-      <th>Status</th>                
-      <th>Actions</th>      
+      <th style="width:140px">Status</th>                
+      <th style="width:140px">Actions</th>      
     </tr>
   </thead>
   <tbody>
@@ -122,35 +122,104 @@
       <td></td>
       <td></td>
       <td><i class="fa fa-circle" style="color:orange"></i> Created</strong></td>
-      <td><a class="btn btn-primary  btn-sm">Publish</a></td>            
+      <td>
+<div class="btn-group">
+  <button type="button" class="btn btn-primary action_bt">Publish</button>
+  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+    <span class="caret"></span>
+    <span class="sr-only">Toggle Dropdown</span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li><a href="#">Prototype</a></li>
+    <li><a href="#">Deprecated</a></li>
+    <li class="divider"></li>
+    <li><a href="#">Delete</a></li>
+  </ul>
+</div>       
+      </td>            
     </tr>
     <tr>
       <td>Youtube</td>
       <td></td>
       <td></td>
       <td><i class="fa fa-circle" style="color:orange"></i> Created</strong></td>
-      <td><a class="btn btn-primary  btn-sm">Publish</a></td>            
-    </tr>
+      <td>
+<div class="btn-group">
+  <button type="button" class="btn btn-primary action_bt">Publish</button>
+  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+    <span class="caret"></span>
+    <span class="sr-only">Toggle Dropdown</span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li><a href="#">Prototype</a></li>
+    <li><a href="#">Deprecated</a></li>
+    <li class="divider"></li>
+    <li><a href="#">Delete</a></li>
+  </ul>
+</div>       
+      </td>      </tr>
     <tr>
       <td>PizzaShack</td>
       <td></td>
       <td></td>
       <td><i class="fa fa-circle" style="color:green"></i> Published</strong></td>
-      <td><a class="btn btn-warning  btn-sm">Unpublish</a></td>            
-    </tr>
-                <tr>
+      <td>
+<div class="btn-group">
+  <button type="button" class="btn btn-warning action_bt">Unpublish</button>
+  <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+    <span class="caret"></span>
+    <span class="sr-only">Toggle Dropdown</span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li><a href="#">Mark as Created</a></li>
+    <li><a href="#">Deprecated</a></li>
+    <li class="divider"></li>
+    <li><a href="#">Delete</a></li>
+  </ul>
+</div>       
+      </td>
+      </tr>
+      <tr>
       <td>Forum</td>
       <td></td>
       <td></td>
       <td><i class="fa fa-circle" style="color:green"></i> Published</strong></td>
-      <td><a class="btn btn-warning  btn-sm">Unpublish</a></td>            
+      <td>
+<div class="btn-group">
+  <button type="button" class="btn btn-warning action_bt">Unpublish</button>
+  <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+    <span class="caret"></span>
+    <span class="sr-only">Toggle Dropdown</span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li><a href="#">Mark as Created</a></li>
+    <li><a href="#">Deprecated</a></li>
+    <li class="divider"></li>
+    <li><a href="#">Delete</a></li>
+  </ul>
+</div>       
+      </td>                   
     </tr>
     <tr>
       <td>APIManager</td>
       <td></td>
       <td></td>
       <td><i class="fa fa-circle" style="color:green"></i> Published</strong></td>
-      <td><a class="btn btn-warning  btn-sm">Unpublish</a></td>            
+      <td>
+<div class="btn-group">
+  <button type="button" class="btn btn-warning action_bt">Unpublish</button>
+  <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+    <span class="caret"></span>
+    <span class="sr-only">Toggle Dropdown</span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li><a href="#">Mark as Created</a></li>
+    <li><a href="#">Deprecated</a></li>
+    <li class="divider"></li>
+    <li><a href="#">Delete</a></li>
+  </ul>
+</div>       
+      </td>
     </tr>    
   </tbody>
 </table>
