--- a/created.html
+++ b/created.html
@@ -111,13 +111,20 @@
   <!-- Tab panes -->
   <div class="tab-content">
     <div class="tab-pane active" id="overview-r">
+<div class="btn-group" role="group" aria-label="...">      
+      <button class="btn btn-default" type="submit"><i class="fa fa-edit "></i> Edit</button>
+      <button class="btn btn-default" type="submit"><i class="fa fa-copy "></i> Copy</button>
+      <button class="btn btn-default" type="submit"><i class="fa fa-remove"></i> Delete</button>
+</div>      
+      &nbsp;&nbsp;
+      <button class="btn btn-primary" type="submit"><i class="fa fa-play"></i> Publish</button>
+      <button class="btn btn-default disabled" type="submit"><i class="fa fa-link"></i> View API In Store</button>
+<br />
+<br />
+
       <div class="alert alert-info" role="alert">
-Your API is ready to publish, Publishing an API will make it available on the store.
-<br /><br />
-<button class="btn btn-primary" type="submit">Publish</button>
+<i class="fa fa-info fa-lg"></i>&nbsp;&nbsp; Your API is ready to publish, Publishing an API will make it available on the store.
       </div>
-<br  />
-<br  />
 <table class="">
   <tr>
     <td>
@@ -233,7 +240,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam elementum convallis
     <li><a href="#documents-r" data-toggle="tab"><i class="fa fa-files-o fa-lg"></i>&nbsp; Documents</a></li>    
     <li><a href="#actrl-r" data-toggle="tab"><i class="fa fa-lock fa-lg"></i>&nbsp; Access Control</a></li> 
     <li><a href="#sequences-r" data-toggle="tab"><i class="fa fa-code-fork fa-lg"></i>&nbsp; Mediation Sequences</a></li>
-    <li><a href="#scripting-r" data-toggle="tab"><i class="fa fa-pencil fa-lg"></i>&nbsp; Scripting</a></li>    
+    <li><a href="#scripting-r" data-toggle="tab"><i class="fa fa-code fa-lg"></i>&nbsp; Scripting</a></li>    
   </ul>
 </div>
                     </div>
