--- a/new.html
+++ b/new.html
@@ -297,8 +297,8 @@ Server  Apache/2.4.7 (Ubuntu)
                   
       </div>
       <div class="modal-footer">        
-        <a href="created.html" class="btn btn-default" >Edit API</a>
-        <a href="index.html" class="btn btn-primary">Go to API List</a>
+        <a href="index.html" class="btn btn-default">Go to API List</a>        
+        <a href="created.html" class="btn btn-primary" >Continue Editing</a>
       </div>
     </div>
   </div>
