--- a/created.html
+++ b/created.html
@@ -79,7 +79,7 @@
                     <a href="index.html">Browse</a>
                 </li>
                 <li>
-                    <a href="#">New API</a>
+                    <a href="new.html">New API</a>
                 </li>
                 <li>
                     <a href="#">Statistics</a>
