changing file locations

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Custom styles for this template -->
     <link href="css/sticky-footer-navbar.css" rel="stylesheet">
     <link href="css/simple-sidebar.css" rel="stylesheet">
-    <link href="public/bootstrap/dist/css/bootstrap-custom-apim.css" rel="stylesheet">
+    <link href="css/bootstrap-custom-apim.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -107,14 +107,14 @@
                     <div class="page-header">
                       <h2>APIs</h2>
                     </div>    
-<table class="table table-striped" id="brtable">
+<table class="table table-striped" id="brtable" cellpadding="0" cellmargin="0">
   <thead>
     <tr>
       <th>API</th>
       <th style="width:140px">Activity</th>
       <th style="width:140px">Usage</th>  
       <th style="width:140px">Status</th>                
-      <th style="width:140px">Actions</th>      
+      <th style="width:200px" class="t-right">Actions</th>      
     </tr>
   </thead>
   <tbody>
@@ -125,9 +125,9 @@
       <td></td>
       <td></td>
       <td><h4><span class="label label-success status_w">Created</span></h4></td>
-      <td>
-      <a href="created.html"><i class="fa fa-pencil-square-o  fa-lg"></i></a>
-      &nbsp; <a href="#">  <i class="fa fa-times fa-lg"></i></a>
+      <td class="t-right">
+        <a href="created.html" class="cu-reg-btn btn-edit" data-toggle="tooltip" data-original-title="Edit"><span>Edit</span></a>
+        <a href="created.html" class="cu-reg-btn btn-delete" data-toggle="tooltip" data-original-title="Delete"><span>Delete</span></a>
       </td>            
     </tr>
     <tr>
@@ -136,9 +136,9 @@
       <td></td>
       <td></td>
       <td><h4><span class="label label-success status_w">Created</span></h4></td>
-      <td>
-      <a href="created.html"><i class="fa fa-pencil-square-o  fa-lg"></i></a>
-      &nbsp; <a href="#">  <i class="fa fa-times fa-lg"></i></a>     
+      <td class="t-right">
+        <a href="created.html" class="cu-reg-btn btn-edit" data-toggle="tooltip" data-original-title="Edit"><span>Edit</span></a>
+        <a href="created.html" class="cu-reg-btn btn-delete" data-toggle="tooltip" data-original-title="Delete"><span>Delete</span></a>
       </td>      
     </tr>
     <tr>
@@ -148,9 +148,9 @@
       <td></td>
       <td><img src="img/c2.jpg"  height="40px"/></td>
       <td><h4><span class="label label-primary status_w">Published</span></h4></td>
-      <td>
-      <a href="created.html"><i class="fa fa-pencil-square-o  fa-lg"></i></a>
-      &nbsp; <a href="#">  <i class="fa fa-times fa-lg"></i></a>      
+      <td class="t-right">
+        <a href="created.html" class="cu-reg-btn btn-edit" data-toggle="tooltip" data-original-title="Edit"><span>Edit</span></a>
+        <a href="created.html" class="cu-reg-btn btn-delete" data-toggle="tooltip" data-original-title="Delete"><span>Delete</span></a>
       </td>
       </tr>
       <tr>
@@ -160,9 +160,9 @@
       <td></td>
       <td><img src="img/c1.jpg"  height="40px" /></td>
       <td><h4><span class="label label-primary status_w">Published</span></h4></td>
-      <td>
-      <a href="created.html"><i class="fa fa-pencil-square-o fa-lg"></i></a>
-      &nbsp; <a href="#">  <i class="fa fa-times fa-lg"></i></a>    
+      <td class="t-right">
+        <a href="created.html" class="cu-reg-btn btn-edit" data-toggle="tooltip" data-original-title="Edit"><span>Edit</span></a>
+        <a href="created.html" class="cu-reg-btn btn-delete" data-toggle="tooltip" data-original-title="Delete"><span>Delete</span></a>
       </td>                   
     </tr>
     <tr>
@@ -172,9 +172,9 @@
       <td></td>
       <td><img src="img/c2.jpg" height="40px" /></td>
       <td><h4><span class="label label-primary status_w">Published</span></h4></td>
-      <td>
-      <a href="created.html"><i class="fa fa-pencil-square-o  fa-lg"></i></a>
-      &nbsp; <a href="#">  <i class="fa fa-times fa-lg"></i></a>       
+      <td class="t-right">
+        <a href="created.html" class="cu-reg-btn btn-edit" data-toggle="tooltip" data-original-title="Edit"><span>Edit</span></a>
+        <a href="created.html" class="cu-reg-btn btn-delete" data-toggle="tooltip" data-original-title="Delete"><span>Delete</span></a>   
       </td>
     </tr>    
   </tbody>
