new styling updates-new files

--- a/created.html
+++ b/created.html
@@ -18,7 +18,7 @@
     <link href="css/sticky-footer-navbar.css" rel="stylesheet">
     <link href="css/simple-sidebar.css" rel="stylesheet">
     <link rel="stylesheet" href="public/bootstrap-vertical-tabs/bootstrap.vertical-tabs.css">
-    <link href="public/bootstrap/dist/css/bootstrap-custom-apim.css" rel="stylesheet">
+    <link href="css/bootstrap-custom-apim.css" rel="stylesheet">
 
     
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
@@ -44,7 +44,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">API Publisher</a>
+          <a class="navbar-brand" href="#"><img src="img/wso2-logo.png" class="logo" />API Publisher</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
