--- a/new.html
+++ b/new.html
@@ -17,7 +17,7 @@
     <!-- Custom styles for this template -->
     <link href="css/sticky-footer-navbar.css" rel="stylesheet">
     <link href="css/simple-sidebar.css" rel="stylesheet">
-    <link href="public/bootstrap/dist/css/bootstrap-custom-apim.css" rel="stylesheet">
+    <link href="css/bootstrap-custom-apim.css" rel="stylesheet">
     
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -42,7 +42,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">API Publisher</a>
+          <a class="navbar-brand" href="#"><img src="img/wso2-logo.png" class="logo" />API Publisher</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
