--- a/created.html
+++ b/created.html
@@ -36,7 +36,7 @@
 
     <!-- Fixed navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container-fluid">
+      <div class="container-fluid wr-header">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
@@ -44,11 +44,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          <a href="#menu-toggle" class="ctrl-toggle" id="menu-toggle"><span class="glyphicon glyphicon-menu-hamburger"></span></a>
           <a class="navbar-brand" href="#"><img src="img/wso2-logo.png" class="logo" />API Publisher</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#menu-toggle" class="" id="menu-toggle">Toggle Menu</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
