--- a/created.html
+++ b/created.html
@@ -48,7 +48,7 @@
           <a class="navbar-brand" href="#"><img src="img/wso2-logo.png" class="logo" />API Publisher</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav  pull-right">
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
