--- a/new.html
+++ b/new.html
@@ -46,7 +46,7 @@
           <a class="navbar-brand" href="#"><img src="img/wso2-logo.png" class="logo" />API Publisher</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
@@ -161,7 +161,7 @@
   <div class="input-group max_width">
     <input id="endpoint" name="endpoint" placeholder="URL of the endpoint." class="form-control input-md" type="text">
     <span class="input-group-btn">
-        <button class="btn btn-default" type="button" data-toggle="modal" data-target="#myModal">Test</button>
+        <button class="btn btn-default btn-combined" type="button" data-toggle="modal" data-target="#myModal">Test</button>
     </span>
   </div>  
 </div>
@@ -174,7 +174,7 @@
   <div class="input-group max_width">
     <input id="endpoint" name="endpoint" placeholder="Ex: http://petstore.swagger.io/v2/swagger.json" class="form-control input-md" type="text">
     <span class="input-group-btn">
-        <button class="btn btn-default" type="button" data-toggle="modal" data-target="#myModal">Test</button>
+        <button class="btn btn-default btn-combined" type="button" data-toggle="modal" data-target="#myModal">Test</button>
     </span>
   </div>      
 </div>
